--- a/tests/integration/targets/test_moving_objects_between_buckets/templates/policy.json.j2
+++ b/tests/integration/targets/test_moving_objects_between_buckets/templates/policy.json.j2
@@ -2,10 +2,14 @@
     "Version": "2012-10-17",
     "Statement": [
         {
+            "Sid": "AddPublicReadCannedAcl",
             "Effect": "Allow",
             "Principal": { "AWS": "*" },
             "Action": [
-                "s3:*"
+                "s3:PutObject",
+                "s3:PutObjectAcl",
+                "s3:GetObject",
+                "s3:GetObjectAcl"
             ],
             "Resource": [
               "arn:aws:s3:::{{ bucket_name_src }}/*",
