try to ping the workers

--- a/roles/deploy_flask_app/templates/vars.yaml.j2
+++ b/roles/deploy_flask_app/templates/vars.yaml.j2
@@ -7,9 +7,9 @@ rds_listening_port: "{{ rds_listening_port }}"
 application_dir: "{{ deploy_flask_app_config.app_dir }}"
 application_env: "{{ deploy_flask_app_config.env }}"
 application_db:
-    host: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.host }}"
-    instance: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.name }}"
-    dbuser_name: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.master_username }}"
-    dbuser_password: "{{ deploy_flask_app_setup.add_host.host_vars.host_config.rds_info.master_user_password }}"
+    host: "{{ deploy_flask_app__rds_host }}"
+    instance: "{{ deploy_flask_app__rds_dbname }}"
+    dbuser_name: "{{ deploy_flask_app_rds_master_username }}"
+    dbuser_password: "{{ deploy_flask_app_rds_master_password }}"
     admin_user: "{{ deploy_flask_app_config.admin_user }}"
     admin_password: "{{ deploy_flask_app_config.admin_password }}"
