add retries when trying to connect to ec2 instances

--- a/roles/deploy_flask_app/templates/deploy_app.yaml.j2
+++ b/roles/deploy_flask_app/templates/deploy_app.yaml.j2
@@ -12,6 +12,10 @@
         block: |
           ClientAliveInterval  1200
           ClientAliveCountMax 3
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Install Podman
       ansible.builtin.yum:
@@ -19,12 +23,20 @@
           - podman
         update_cache: True
         state: present
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Check running container
       ansible.builtin.shell:
         cmd: "podman container ps -a -f name=webapp-container-1 --format=.Names"
       register: container
       changed_when: false
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
 
     - name: Run application instance
       ansible.builtin.shell:
@@ -47,3 +59,7 @@
       when:
         - container.stdout == ""
       changed_when: true
+      retries: 5
+      delay: 5
+      until: result is successful
+      register: result
