--- a/roles/deploy_flask_app/templates/deploy_app.yaml.j2
+++ b/roles/deploy_flask_app/templates/deploy_app.yaml.j2
@@ -26,6 +26,23 @@
       register: container
       changed_when: false
 
+    - name: Initialize database tables
+      ansible.builtin.shell:
+        cmd: >
+          podman run --rm
+          -e FLASK_APP="{{ deploy_flask_app_config.app_dir }}"
+          -e FLASK_ENV="{{ deploy_flask_app_config.env }}"
+          -e DATABASE_HOST="{{ deploy_flask_app__rds_host }}"
+          -e DATABASE_INSTANCE="{{ deploy_flask_app__rds_dbname }}"
+          -e DATABASE_USER="{{ deploy_flask_app_rds_master_username }}"
+          -e DATABASE_PASSWORD="{{ deploy_flask_app_rds_master_password }}"
+          -e ADMIN_USER="{{ deploy_flask_app_config.admin_user }}"
+          -e ADMIN_PASSWORD="{{ deploy_flask_app_config.admin_password }}"
+          -e WORKER_HOSTNAME="{{ deploy_flask_app_worker_hostname }}"
+          -e WORKERS_HOSTS="{{ deploy_flask_app_instances_list }}"
+          {{ deploy_flask_app_container_image }} flask {{ (deploy_flask_app_force_init | bool) | ternary('force-init-db', 'init-db') }}
+      run_once: true
+
     - name: Run application instance
       ansible.builtin.shell:
         cmd: >-
