--- a/tests/integration/targets/test_upload_file_to_s3/templates/upload_file_vars.yaml.j2
+++ b/tests/integration/targets/test_upload_file_to_s3/templates/upload_file_vars.yaml.j2
@@ -1,8 +1,8 @@
 ---
 aws_access_key: "{{ aws_access_key }}"
 aws_access_key: "{{ aws_secret_key }}"
-{% if session_token is defined %}
-aws_session_token: "{{ session_token }}"
+{% if security_token is defined %}
+aws_session_token: "{{ security_token }}"
 {% endif %}
 upload_file_to_s3_bucket_name: "{{ s3_bucket_name }}"
 upload_file_to_s3_file_path: "{{ playbook_dir }}/files/test_object.txt"
