--- a/tests/integration/targets/test_upload_file_to_s3/templates/upload_file_vars.yaml.j2
+++ b/tests/integration/targets/test_upload_file_to_s3/templates/upload_file_vars.yaml.j2
@@ -1,6 +1,6 @@
 ---
 aws_access_key: "{{ aws_access_key }}"
-aws_access_key: "{{ aws_secret_key }}"
+aws_secret_key: "{{ aws_secret_key }}"
 {% if security_token is defined %}
 aws_session_token: "{{ security_token }}"
 {% endif %}
